--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+html5ever = "*"
+markup5ever_arcdom = "*"
+markup5ever = "*"
+regex = "*"
